Fix segfault in addItem()
Fix a dumb bug where we always passed the first client's vm context when
starting a new vm process regardless of its the right context for that
vm.

This caused important segfault ad one thread was freeing ressoures the
other needed.

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -2,5 +2,12 @@
     "files.associations": {
         "*.rh": "cpp",
         "linkedlist.h": "c"
-    }
+    },
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "/home/asayu/Documents/UQTR/SIF1015/SIF1015-TP1/server",
+            "binaryPath": "/home/asayu/Documents/UQTR/SIF1015/SIF1015-TP1/server/Server_VMS",
+            "binaryArgs": []
+        }
+    ]
 }
