Client now displays response from server. Fixed borders. Added exec files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+.idea/.idea.SIF1015-TP1.dir/.idea/workspace.xml
+server/Server_VMS
+client/Client_VMS
