The TX&RX windows are now 2 forked processes Added semaphore for client TX&RX windows Now clearing the windows when cursor arrives at end (and resetting cursor at beginning)

--- a/client/Makefile
+++ b/client/Makefile
@@ -27,7 +27,7 @@ WINCC = x86_64-w64-mingw32-gcc
 
 # Compile / Link Flags
 CFLAGS += -c -Wall -std=c99 -pedantic-errors -g
-LDFLAGS = -lncurses
+LDFLAGS = -lncurses -pthread
 
 WINLDFLAGS = "-L /usr/x86_64-w64-mingw32/lib/ -lmingw32 -lz -llzm -lm -mwindows"
 
